@@ -8,6 +8,7 @@
    7. Prop_OpenPassword can now have a language qualifier
    8. LIST AREA SHOPS will now show local shop inventories with prices
    9. Archon QUESTS [QUEST NAME] and LIST QUESTWINNERS can now show all winners of quests.
+  10. New CHANNEL flag: NOLANGUAGE, to turn off foreign languages when using the channel.
 
 # Build 5.9.2 Released 02/09/2016
    1. Apprentice now gets bonus common skill.
